env-kubernetes/app-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-tracker
  template:
    metadata:
      labels:
        app: market-tracker
    spec:
      imagePullSecrets:
        - name: ghcr-secret # This tells K3s to use the password we inject in the pipeline
      containers:
      - name: app
        image: ghcr.io/odonnkongolo/never404-platform-app:latest
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: market-tracker-svc
spec:
  selector:
    app: market-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
