env-kubernetes/app-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-frontend-test
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-test
  template:
    metadata:
      labels:
        app: market-test
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: market-frontend-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: market-test
