env-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - never404.co.uk
    - www.never404.co.uk
    secretName: never404-tls
  rules:
  - host: never404.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: market-tracker-svc  # <--- The Bridge is Fixed Here
            port:
              number: 80
  - host: www.never404.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: market-tracker-svc  # <--- And Here
            port:
              number: 80
